// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render-smoke — the ergonomic components mount headless Button — ordered composition renders text/icon/text through the root Pressable 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#beaaff",
      "borderRadius": 9999,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 0.4,
      "paddingHorizontal": 18,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 17,
          "fontWeight": "600",
          "letterSpacing": -0.34,
          "lineHeight": 21.93,
        },
        {
          "color": "#381b6a",
        },
        {
          "flexShrink": 1,
          "textAlign": "center",
        },
        {},
      ]
    }
  >
    Buy Bitcoin
  </Text>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    color="#381b6a"
    fill="currentColor"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width={24}
    xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path d="M24.7818 12.6055C24.6583 12.7015 22.4778 13.9325 22.4778 16.6695C22.4778 19.8354 25.2524 20.9554 25.3355 20.9831C25.3227 21.0514 24.8947 22.517 23.8726 24.0103C22.9612 25.3245 22.0093 26.6365 20.5613 26.6365C19.1134 26.6365 18.7407 25.7938 17.0691 25.7938C15.4401 25.7938 14.8609 26.6642 13.5364 26.6642C12.212 26.6642 11.2878 25.4482 10.2252 23.9549C8.99443 22.2013 8 19.477 8 16.8914C8 12.7442 10.6916 10.5447 13.3405 10.5447C14.7481 10.5447 15.9214 11.4706 16.8051 11.4706C17.6462 11.4706 18.9579 10.4893 20.5592 10.4893C21.1661 10.4893 23.3466 10.5447 24.7818 12.6055ZM19.799 8.73354C20.4613 7.94634 20.9297 6.85407 20.9297 5.76181C20.9297 5.61034 20.917 5.45674 20.8893 5.33301C19.8118 5.37354 18.5299 6.05194 17.7569 6.95007C17.15 7.64127 16.5836 8.73354 16.5836 9.84074C16.5836 10.0071 16.6113 10.1735 16.6241 10.2269C16.6922 10.2397 16.8029 10.2546 16.9137 10.2546C17.8804 10.2546 19.0963 9.60607 19.799 8.73354Z" fill="currentColor"/></svg>"
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={
        {
          "type": 2,
        }
      }
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M24.7818 12.6055C24.6583 12.7015 22.4778 13.9325 22.4778 16.6695C22.4778 19.8354 25.2524 20.9554 25.3355 20.9831C25.3227 21.0514 24.8947 22.517 23.8726 24.0103C22.9612 25.3245 22.0093 26.6365 20.5613 26.6365C19.1134 26.6365 18.7407 25.7938 17.0691 25.7938C15.4401 25.7938 14.8609 26.6642 13.5364 26.6642C12.212 26.6642 11.2878 25.4482 10.2252 23.9549C8.99443 22.2013 8 19.477 8 16.8914C8 12.7442 10.6916 10.5447 13.3405 10.5447C14.7481 10.5447 15.9214 11.4706 16.8051 11.4706C17.6462 11.4706 18.9579 10.4893 20.5592 10.4893C21.1661 10.4893 23.3466 10.5447 24.7818 12.6055ZM19.799 8.73354C20.4613 7.94634 20.9297 6.85407 20.9297 5.76181C20.9297 5.61034 20.917 5.45674 20.8893 5.33301C19.8118 5.37354 18.5299 6.05194 17.7569 6.95007C17.15 7.64127 16.5836 8.73354 16.5836 9.84074C16.5836 10.0071 16.6113 10.1735 16.6241 10.2269C16.6922 10.2397 16.8029 10.2546 16.9137 10.2546C17.8804 10.2546 19.0963 9.60607 19.799 8.73354Z"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 17,
          "fontWeight": "600",
          "letterSpacing": -0.34,
          "lineHeight": 21.93,
        },
        {
          "color": "#381b6a",
        },
        {
          "flexShrink": 1,
          "textAlign": "center",
        },
        {},
      ]
    }
  >
    Pay
  </Text>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless Button — typed named props · interactive (Pressable) · label children 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#beaaff",
      "borderRadius": 9999,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "paddingHorizontal": 18,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 17,
          "fontWeight": "600",
          "letterSpacing": -0.34,
          "lineHeight": 21.93,
        },
        {
          "color": "#381b6a",
        },
        {
          "flexShrink": 1,
          "textAlign": "center",
        },
        {},
      ]
    }
  >
    Buy Bitcoin
  </Text>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless IconAvatar — outline variant paints a transparent border affordance with muted glyph 1`] = `
<View
  accessibilityElementsHidden={true}
  importantForAccessibility="no-hide-descendants"
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#dddac9",
      "borderRadius": 9999,
      "borderWidth": 1,
      "height": 48,
      "justifyContent": "center",
      "width": 48,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    color="#666455"
    fill="currentColor"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width={24}
    xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path fill-rule="evenodd" clip-rule="evenodd" d="M4 15.0002C4 12.2388 6.23858 10.0002 9 10.0002H23C25.7614 10.0002 28 12.2388 28 15.0002H26C26 13.3433 24.6569 12.0002 23 12.0002H9C7.34315 12.0002 6 13.3433 6 15.0002V23.0002C6 24.6571 7.34315 26.0002 9 26.0002H23C24.6569 26.0002 26 24.6571 26 23.0002H28C28 25.7616 25.7614 28.0002 23 28.0002H9C6.23858 28.0002 4 25.7616 4 23.0002V15.0002Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M28 16.0002H22C20.8954 16.0002 20 16.8956 20 18.0002V20.0002C20 21.1048 20.8954 22.0002 22 22.0002H28V16.0002ZM22 14.0002C19.7909 14.0002 18 15.7911 18 18.0002V20.0002C18 22.2093 19.7909 24.0002 22 24.0002H28C29.1046 24.0002 30 23.1048 30 22.0002V16.0002C30 14.8956 29.1046 14.0002 28 14.0002H22Z" fill="currentColor"/><path d="M24 19.0002C24 19.5525 23.5523 20.0002 23 20.0002C22.4477 20.0002 22 19.5525 22 19.0002C22 18.4479 22.4477 18.0002 23 18.0002C23.5523 18.0002 24 18.4479 24 19.0002Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M18.3303 6.41482C18.0128 5.98943 17.4183 5.88618 16.976 6.17962L8.15244 12.0335C7.69223 12.3388 7.07164 12.2132 6.76632 11.753C6.461 11.2928 6.58656 10.6722 7.04678 10.3669L15.8704 4.51303C17.1973 3.63272 18.9808 3.94247 19.9332 5.21865L23.8014 10.4021C24.1317 10.8447 24.0407 11.4713 23.5981 11.8016C23.1555 12.1319 22.5289 12.0409 22.1986 11.5983L18.3303 6.41482Z" fill="currentColor"/></svg>"
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={
        {
          "type": 2,
        }
      }
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        clipRule={0}
        d="M4 15.0002C4 12.2388 6.23858 10.0002 9 10.0002H23C25.7614 10.0002 28 12.2388 28 15.0002H26C26 13.3433 24.6569 12.0002 23 12.0002H9C7.34315 12.0002 6 13.3433 6 15.0002V23.0002C6 24.6571 7.34315 26.0002 9 26.0002H23C24.6569 26.0002 26 24.6571 26 23.0002H28C28 25.7616 25.7614 28.0002 23 28.0002H9C6.23858 28.0002 4 25.7616 4 23.0002V15.0002Z"
        fill={
          {
            "type": 2,
          }
        }
        fillRule={0}
        propList={
          [
            "fill",
            "fillRule",
          ]
        }
      />
      <RNSVGPath
        clipRule={0}
        d="M28 16.0002H22C20.8954 16.0002 20 16.8956 20 18.0002V20.0002C20 21.1048 20.8954 22.0002 22 22.0002H28V16.0002ZM22 14.0002C19.7909 14.0002 18 15.7911 18 18.0002V20.0002C18 22.2093 19.7909 24.0002 22 24.0002H28C29.1046 24.0002 30 23.1048 30 22.0002V16.0002C30 14.8956 29.1046 14.0002 28 14.0002H22Z"
        fill={
          {
            "type": 2,
          }
        }
        fillRule={0}
        propList={
          [
            "fill",
            "fillRule",
          ]
        }
      />
      <RNSVGPath
        d="M24 19.0002C24 19.5525 23.5523 20.0002 23 20.0002C22.4477 20.0002 22 19.5525 22 19.0002C22 18.4479 22.4477 18.0002 23 18.0002C23.5523 18.0002 24 18.4479 24 19.0002Z"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
      <RNSVGPath
        clipRule={0}
        d="M18.3303 6.41482C18.0128 5.98943 17.4183 5.88618 16.976 6.17962L8.15244 12.0335C7.69223 12.3388 7.07164 12.2132 6.76632 11.753C6.461 11.2928 6.58656 10.6722 7.04678 10.3669L15.8704 4.51303C17.1973 3.63272 18.9808 3.94247 19.9332 5.21865L23.8014 10.4021C24.1317 10.8447 24.0407 11.4713 23.5981 11.8016C23.1555 12.1319 22.5289 12.0409 22.1986 11.5983L18.3303 6.41482Z"
        fill={
          {
            "type": 2,
          }
        }
        fillRule={0}
        propList={
          [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless IconAvatar — static (View) · the register glyph inherits the scope fg 1`] = `
<View
  accessibilityElementsHidden={true}
  importantForAccessibility="no-hide-descendants"
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#f3f1e2",
      "borderRadius": 9999,
      "height": 48,
      "justifyContent": "center",
      "width": 48,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    color="#222013"
    fill="currentColor"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width={24}
    xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path d="M24.7818 12.6055C24.6583 12.7015 22.4778 13.9325 22.4778 16.6695C22.4778 19.8354 25.2524 20.9554 25.3355 20.9831C25.3227 21.0514 24.8947 22.517 23.8726 24.0103C22.9612 25.3245 22.0093 26.6365 20.5613 26.6365C19.1134 26.6365 18.7407 25.7938 17.0691 25.7938C15.4401 25.7938 14.8609 26.6642 13.5364 26.6642C12.212 26.6642 11.2878 25.4482 10.2252 23.9549C8.99443 22.2013 8 19.477 8 16.8914C8 12.7442 10.6916 10.5447 13.3405 10.5447C14.7481 10.5447 15.9214 11.4706 16.8051 11.4706C17.6462 11.4706 18.9579 10.4893 20.5592 10.4893C21.1661 10.4893 23.3466 10.5447 24.7818 12.6055ZM19.799 8.73354C20.4613 7.94634 20.9297 6.85407 20.9297 5.76181C20.9297 5.61034 20.917 5.45674 20.8893 5.33301C19.8118 5.37354 18.5299 6.05194 17.7569 6.95007C17.15 7.64127 16.5836 8.73354 16.5836 9.84074C16.5836 10.0071 16.6113 10.1735 16.6241 10.2269C16.6922 10.2397 16.8029 10.2546 16.9137 10.2546C17.8804 10.2546 19.0963 9.60607 19.799 8.73354Z" fill="currentColor"/></svg>"
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={
        {
          "type": 2,
        }
      }
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M24.7818 12.6055C24.6583 12.7015 22.4778 13.9325 22.4778 16.6695C22.4778 19.8354 25.2524 20.9554 25.3355 20.9831C25.3227 21.0514 24.8947 22.517 23.8726 24.0103C22.9612 25.3245 22.0093 26.6365 20.5613 26.6365C19.1134 26.6365 18.7407 25.7938 17.0691 25.7938C15.4401 25.7938 14.8609 26.6642 13.5364 26.6642C12.212 26.6642 11.2878 25.4482 10.2252 23.9549C8.99443 22.2013 8 19.477 8 16.8914C8 12.7442 10.6916 10.5447 13.3405 10.5447C14.7481 10.5447 15.9214 11.4706 16.8051 11.4706C17.6462 11.4706 18.9579 10.4893 20.5592 10.4893C21.1661 10.4893 23.3466 10.5447 24.7818 12.6055ZM19.799 8.73354C20.4613 7.94634 20.9297 6.85407 20.9297 5.76181C20.9297 5.61034 20.917 5.45674 20.8893 5.33301C19.8118 5.37354 18.5299 6.05194 17.7569 6.95007C17.15 7.64127 16.5836 8.73354 16.5836 9.84074C16.5836 10.0071 16.6113 10.1735 16.6241 10.2269C16.6922 10.2397 16.8029 10.2546 16.9137 10.2546C17.8804 10.2546 19.0963 9.60607 19.799 8.73354Z"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless IconButton — the icon-only glyph circle · glyph routed via the \`icon\` prop · a11y name 1`] = `
<View
  accessibilityLabel="Buy Bitcoin"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#beaaff",
      "borderRadius": 9999,
      "flexDirection": "row",
      "gap": 6,
      "justifyContent": "center",
      "minHeight": 48,
      "minWidth": 48,
      "paddingHorizontal": 12,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    color="#381b6a"
    fill="currentColor"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width={24}
    xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path d="M24.7818 12.6055C24.6583 12.7015 22.4778 13.9325 22.4778 16.6695C22.4778 19.8354 25.2524 20.9554 25.3355 20.9831C25.3227 21.0514 24.8947 22.517 23.8726 24.0103C22.9612 25.3245 22.0093 26.6365 20.5613 26.6365C19.1134 26.6365 18.7407 25.7938 17.0691 25.7938C15.4401 25.7938 14.8609 26.6642 13.5364 26.6642C12.212 26.6642 11.2878 25.4482 10.2252 23.9549C8.99443 22.2013 8 19.477 8 16.8914C8 12.7442 10.6916 10.5447 13.3405 10.5447C14.7481 10.5447 15.9214 11.4706 16.8051 11.4706C17.6462 11.4706 18.9579 10.4893 20.5592 10.4893C21.1661 10.4893 23.3466 10.5447 24.7818 12.6055ZM19.799 8.73354C20.4613 7.94634 20.9297 6.85407 20.9297 5.76181C20.9297 5.61034 20.917 5.45674 20.8893 5.33301C19.8118 5.37354 18.5299 6.05194 17.7569 6.95007C17.15 7.64127 16.5836 8.73354 16.5836 9.84074C16.5836 10.0071 16.6113 10.1735 16.6241 10.2269C16.6922 10.2397 16.8029 10.2546 16.9137 10.2546C17.8804 10.2546 19.0963 9.60607 19.799 8.73354Z" fill="currentColor"/></svg>"
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={
        {
          "type": 2,
        }
      }
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M24.7818 12.6055C24.6583 12.7015 22.4778 13.9325 22.4778 16.6695C22.4778 19.8354 25.2524 20.9554 25.3355 20.9831C25.3227 21.0514 24.8947 22.517 23.8726 24.0103C22.9612 25.3245 22.0093 26.6365 20.5613 26.6365C19.1134 26.6365 18.7407 25.7938 17.0691 25.7938C15.4401 25.7938 14.8609 26.6642 13.5364 26.6642C12.212 26.6642 11.2878 25.4482 10.2252 23.9549C8.99443 22.2013 8 19.477 8 16.8914C8 12.7442 10.6916 10.5447 13.3405 10.5447C14.7481 10.5447 15.9214 11.4706 16.8051 11.4706C17.6462 11.4706 18.9579 10.4893 20.5592 10.4893C21.1661 10.4893 23.3466 10.5447 24.7818 12.6055ZM19.799 8.73354C20.4613 7.94634 20.9297 6.85407 20.9297 5.76181C20.9297 5.61034 20.917 5.45674 20.8893 5.33301C19.8118 5.37354 18.5299 6.05194 17.7569 6.95007C17.15 7.64127 16.5836 8.73354 16.5836 9.84074C16.5836 10.0071 16.6113 10.1735 16.6241 10.2269C16.6922 10.2397 16.8029 10.2546 16.9137 10.2546C17.8804 10.2546 19.0963 9.60607 19.799 8.73354Z"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless List — open container preserves positional rows and separators 1`] = `
<View
  style={
    {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    accessibilityLabel="Bank"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderRadius": 18,
        "flexDirection": "row",
        "gap": 12,
        "padding": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#dddac9",
          "borderRadius": 9999,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={18}
        bbWidth={18}
        color="#666455"
        fill="currentColor"
        focusable={false}
        height={18}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 18,
              "width": 18,
            },
          ]
        }
        vbHeight={32}
        vbWidth={32}
        width={18}
        xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.0002 27C4.0002 26.4477 4.44791 26 5.0002 26H27.0002C27.5525 26 28.0002 26.4477 28.0002 27C28.0002 27.5523 27.5525 28 27.0002 28H5.0002C4.44791 28 4.0002 27.5523 4.0002 27Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M27.9614 10.3919C27.7746 11.3269 26.9537 12 26.0002 12H6.0002C5.04671 12 4.22581 11.3269 4.03897 10.3919C3.85213 9.4569 4.35132 8.52002 5.23158 8.15359L14.4383 4.32107C14.939 4.1014 15.4783 4 16.0002 4C16.5221 4 17.0614 4.1014 17.5621 4.32107L26.7688 8.15359C27.6491 8.52002 28.1483 9.4569 27.9614 10.3919ZM16.7726 6.15876C16.5422 6.05511 16.2741 6 16.0002 6C15.7263 6 15.4582 6.05511 15.2278 6.15876L6.0002 10H26.0002L16.7726 6.15876Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M6.0002 14C6.55248 14 7.0002 14.4477 7.0002 15V22H9.0002V15C9.0002 14.4477 9.44791 14 10.0002 14C10.5525 14 11.0002 14.4477 11.0002 15V23C11.0002 23.5523 10.5525 24 10.0002 24H6.0002C5.44791 24 5.0002 23.5523 5.0002 23V15C5.0002 14.4477 5.44791 14 6.0002 14Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M14.0002 14C14.5525 14 15.0002 14.4477 15.0002 15V22H17.0002V15C17.0002 14.4477 17.4479 14 18.0002 14C18.5525 14 19.0002 14.4477 19.0002 15V23C19.0002 23.5523 18.5525 24 18.0002 24H14.0002C13.4479 24 13.0002 23.5523 13.0002 23V15C13.0002 14.4477 13.4479 14 14.0002 14Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M22.0002 14C22.5525 14 23.0002 14.4477 23.0002 15V22H25.0002V15C25.0002 14.4477 25.4479 14 26.0002 14C26.5525 14 27.0002 14.4477 27.0002 15V23C27.0002 23.5523 26.5525 24 26.0002 24H22.0002C21.4479 24 21.0002 23.5523 21.0002 23V15C21.0002 14.4477 21.4479 14 22.0002 14Z" fill="currentColor"/></svg>"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M4.0002 27C4.0002 26.4477 4.44791 26 5.0002 26H27.0002C27.5525 26 28.0002 26.4477 28.0002 27C28.0002 27.5523 27.5525 28 27.0002 28H5.0002C4.44791 28 4.0002 27.5523 4.0002 27Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M27.9614 10.3919C27.7746 11.3269 26.9537 12 26.0002 12H6.0002C5.04671 12 4.22581 11.3269 4.03897 10.3919C3.85213 9.4569 4.35132 8.52002 5.23158 8.15359L14.4383 4.32107C14.939 4.1014 15.4783 4 16.0002 4C16.5221 4 17.0614 4.1014 17.5621 4.32107L26.7688 8.15359C27.6491 8.52002 28.1483 9.4569 27.9614 10.3919ZM16.7726 6.15876C16.5422 6.05511 16.2741 6 16.0002 6C15.7263 6 15.4582 6.05511 15.2278 6.15876L6.0002 10H26.0002L16.7726 6.15876Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M6.0002 14C6.55248 14 7.0002 14.4477 7.0002 15V22H9.0002V15C9.0002 14.4477 9.44791 14 10.0002 14C10.5525 14 11.0002 14.4477 11.0002 15V23C11.0002 23.5523 10.5525 24 10.0002 24H6.0002C5.44791 24 5.0002 23.5523 5.0002 23V15C5.0002 14.4477 5.44791 14 6.0002 14Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M14.0002 14C14.5525 14 15.0002 14.4477 15.0002 15V22H17.0002V15C17.0002 14.4477 17.4479 14 18.0002 14C18.5525 14 19.0002 14.4477 19.0002 15V23C19.0002 23.5523 18.5525 24 18.0002 24H14.0002C13.4479 24 13.0002 23.5523 13.0002 23V15C13.0002 14.4477 13.4479 14 14.0002 14Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M22.0002 14C22.5525 14 23.0002 14.4477 23.0002 15V22H25.0002V15C25.0002 14.4477 25.4479 14 26.0002 14C26.5525 14 27.0002 14.4477 27.0002 15V23C27.0002 23.5523 26.5525 24 26.0002 24H22.0002C21.4479 24 21.0002 23.5523 21.0002 23V15C21.0002 14.4477 21.4479 14 22.0002 14Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 0,
          "justifyContent": "center",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 17,
              "fontWeight": "600",
              "letterSpacing": -0.34,
              "lineHeight": 21.93,
            },
            {
              "color": "#222013",
            },
            {
              "flexShrink": 1,
              "textAlign": "center",
            },
            {
              "textAlign": "left",
            },
          ]
        }
      >
        Bank account
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 12,
      }
    }
  >
    <View
      accessibilityRole="none"
      style={
        {
          "backgroundColor": "#dddac9",
          "height": 1,
          "marginVertical": 0,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    accessibilityLabel="Card"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderRadius": 18,
        "flexDirection": "row",
        "gap": 12,
        "padding": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#dddac9",
          "borderRadius": 9999,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={18}
        bbWidth={18}
        color="#666455"
        fill="currentColor"
        focusable={false}
        height={18}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 18,
              "width": 18,
            },
          ]
        }
        vbHeight={32}
        vbWidth={32}
        width={18}
        xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path fill-rule="evenodd" clip-rule="evenodd" d="M6 17C6 16.4477 6.44772 16 7 16H11C11.5523 16 12 16.4477 12 17C12 17.5523 11.5523 18 11 18H7C6.44772 18 6 17.5523 6 17Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M16 17C16 16.4477 16.4477 16 17 16H25C25.5523 16 26 16.4477 26 17C26 17.5523 25.5523 18 25 18H17C16.4477 18 16 17.5523 16 17Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M16 21C16 20.4477 16.4477 20 17 20H25C25.5523 20 26 20.4477 26 21C26 21.5523 25.5523 22 25 22H17C16.4477 22 16 21.5523 16 21Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M26 8H6C4.89543 8 4 8.89543 4 10V22C4 23.1046 4.89543 24 6 24H26C27.1046 24 28 23.1046 28 22V10C28 8.89543 27.1046 8 26 8ZM6 6C3.79086 6 2 7.79086 2 10V22C2 24.2091 3.79086 26 6 26H26C28.2091 26 30 24.2091 30 22V10C30 7.79086 28.2091 6 26 6H6Z" fill="currentColor"/></svg>"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M6 17C6 16.4477 6.44772 16 7 16H11C11.5523 16 12 16.4477 12 17C12 17.5523 11.5523 18 11 18H7C6.44772 18 6 17.5523 6 17Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M16 17C16 16.4477 16.4477 16 17 16H25C25.5523 16 26 16.4477 26 17C26 17.5523 25.5523 18 25 18H17C16.4477 18 16 17.5523 16 17Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M16 21C16 20.4477 16.4477 20 17 20H25C25.5523 20 26 20.4477 26 21C26 21.5523 25.5523 22 25 22H17C16.4477 22 16 21.5523 16 21Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M26 8H6C4.89543 8 4 8.89543 4 10V22C4 23.1046 4.89543 24 6 24H26C27.1046 24 28 23.1046 28 22V10C28 8.89543 27.1046 8 26 8ZM6 6C3.79086 6 2 7.79086 2 10V22C2 24.2091 3.79086 26 6 26H26C28.2091 26 30 24.2091 30 22V10C30 7.79086 28.2091 6 26 6H6Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 0,
          "justifyContent": "center",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 17,
              "fontWeight": "600",
              "letterSpacing": -0.34,
              "lineHeight": 21.93,
            },
            {
              "color": "#222013",
            },
            {
              "flexShrink": 1,
              "textAlign": "center",
            },
            {
              "textAlign": "left",
            },
          ]
        }
      >
        Credit card
      </Text>
    </View>
  </View>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless ListAction — direct row slots render avatar, content, trailing value, and trail icon 1`] = `
<View
  accessibilityLabel="Transaction"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 18,
      "flexDirection": "row",
      "gap": 12,
      "padding": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#dddac9",
        "borderRadius": 9999,
        "borderWidth": 1,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={18}
      bbWidth={18}
      color="#666455"
      fill="currentColor"
      focusable={false}
      height={18}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 18,
            "width": 18,
          },
        ]
      }
      vbHeight={32}
      vbWidth={32}
      width={18}
      xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.29293 4.29289C15.68347 3.90237 16.31653 3.90237 16.70707 4.29289L20.70707 8.29289C21.0976 8.68341 21.0976 9.31659 20.70707 9.70711C20.31653 10.09763 19.68347 10.09763 19.29293 9.70711L17 7.41421L17 27C17 27.55227 16.55227 28 16 28C15.44773 28 15 27.55227 15 27L15 7.41421L12.70711 9.70711C12.31659 10.09763 11.68343 10.09763 11.29289 9.70711C10.90237 9.31659 10.90237 8.68341 11.29289 8.29289L15.29293 4.29289Z" fill="currentColor"/></svg>"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M15.29293 4.29289C15.68347 3.90237 16.31653 3.90237 16.70707 4.29289L20.70707 8.29289C21.0976 8.68341 21.0976 9.31659 20.70707 9.70711C20.31653 10.09763 19.68347 10.09763 19.29293 9.70711L17 7.41421L17 27C17 27.55227 16.55227 28 16 28C15.44773 28 15 27.55227 15 27L15 7.41421L12.70711 9.70711C12.31659 10.09763 11.68343 10.09763 11.29289 9.70711C10.90237 9.31659 10.90237 8.68341 11.29289 8.29289L15.29293 4.29289Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 0,
        "justifyContent": "center",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 17,
            "fontWeight": "600",
            "letterSpacing": -0.34,
            "lineHeight": 21.93,
          },
          {
            "color": "#222013",
          },
          {
            "flexShrink": 1,
            "textAlign": "center",
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      To Emin Mahrt
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 14.5,
            "fontWeight": "400",
            "letterSpacing": -0.145,
            "lineHeight": 19.285,
          },
          {
            "color": "#666455",
          },
          {
            "flexShrink": 1,
            "textAlign": "center",
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      Sent • Wed, 16 May
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 17,
            "fontWeight": "600",
            "letterSpacing": -0.34,
            "lineHeight": 21.93,
          },
          {
            "color": "#222013",
          },
          {
            "flexShrink": 1,
            "textAlign": "center",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      - 12.00 €
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 14.5,
            "fontWeight": "400",
            "letterSpacing": -0.145,
            "lineHeight": 19.285,
          },
          {
            "color": "#666455",
          },
          {
            "flexShrink": 1,
            "textAlign": "center",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      3433 Sats
    </Text>
  </View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={18}
    bbWidth={18}
    color="#bfbcac"
    fill="currentColor"
    focusable={false}
    height={18}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 18,
          "width": 18,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width={18}
    xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.2826 4.30337C9.89783 4.6996 9.90715 5.3327 10.3034 5.71743L20.893 16L10.3034 26.2826C9.90714 26.6673 9.89783 27.3004 10.2826 27.6966C10.6673 28.0929 11.3004 28.1022 11.6966 27.7174L22.4914 17.2357C22.5003 17.227 22.509 17.2183 22.5176 17.2093C22.6733 17.0465 22.7945 16.8556 22.8764 16.6486C22.9584 16.4417 23 16.2215 23 16C23 15.7785 22.9584 15.5583 22.8764 15.3514C22.7945 15.1444 22.6733 14.9535 22.5176 14.7907C22.509 14.7817 22.5003 14.773 22.4914 14.7643L11.6966 4.28257C11.3004 3.89783 10.6673 3.90714 10.2826 4.30337Z" fill="currentColor"/></svg>"
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={
        {
          "type": 2,
        }
      }
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        clipRule={0}
        d="M10.2826 4.30337C9.89783 4.6996 9.90715 5.3327 10.3034 5.71743L20.893 16L10.3034 26.2826C9.90714 26.6673 9.89783 27.3004 10.2826 27.6966C10.6673 28.0929 11.3004 28.1022 11.6966 27.7174L22.4914 17.2357C22.5003 17.227 22.509 17.2183 22.5176 17.2093C22.6733 17.0465 22.7945 16.8556 22.8764 16.6486C22.9584 16.4417 23 16.2215 23 16C23 15.7785 22.9584 15.5583 22.8764 15.3514C22.7945 15.1444 22.6733 14.9535 22.5176 14.7907C22.509 14.7817 22.5003 14.773 22.4914 14.7643L11.6966 4.28257C11.3004 3.89783 10.6673 3.90714 10.2826 4.30337Z"
        fill={
          {
            "type": 2,
          }
        }
        fillRule={0}
        propList={
          [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless TabBar — OPEN container renders its positional Tab children · selected + unselected items 1`] = `
<View
  style={
    {
      "alignItems": "stretch",
      "backgroundColor": "#fffdf2",
      "flexDirection": "row",
      "minHeight": 54,
      "paddingBottom": 12,
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "gap": 4,
        "justifyContent": "center",
        "minWidth": 0,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      color="#222013"
      fill="currentColor"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={32}
      vbWidth={32}
      width={24}
      xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path fill-rule="evenodd" clip-rule="evenodd" d="M6 17C6 16.4477 6.44772 16 7 16H11C11.5523 16 12 16.4477 12 17C12 17.5523 11.5523 18 11 18H7C6.44772 18 6 17.5523 6 17Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M16 17C16 16.4477 16.4477 16 17 16H25C25.5523 16 26 16.4477 26 17C26 17.5523 25.5523 18 25 18H17C16.4477 18 16 17.5523 16 17Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M16 21C16 20.4477 16.4477 20 17 20H25C25.5523 20 26 20.4477 26 21C26 21.5523 25.5523 22 25 22H17C16.4477 22 16 21.5523 16 21Z" fill="currentColor"/><path fill-rule="evenodd" clip-rule="evenodd" d="M26 8H6C4.89543 8 4 8.89543 4 10V22C4 23.1046 4.89543 24 6 24H26C27.1046 24 28 23.1046 28 22V10C28 8.89543 27.1046 8 26 8ZM6 6C3.79086 6 2 7.79086 2 10V22C2 24.2091 3.79086 26 6 26H26C28.2091 26 30 24.2091 30 22V10C30 7.79086 28.2091 6 26 6H6Z" fill="currentColor"/></svg>"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M6 17C6 16.4477 6.44772 16 7 16H11C11.5523 16 12 16.4477 12 17C12 17.5523 11.5523 18 11 18H7C6.44772 18 6 17.5523 6 17Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
        <RNSVGPath
          clipRule={0}
          d="M16 17C16 16.4477 16.4477 16 17 16H25C25.5523 16 26 16.4477 26 17C26 17.5523 25.5523 18 25 18H17C16.4477 18 16 17.5523 16 17Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
        <RNSVGPath
          clipRule={0}
          d="M16 21C16 20.4477 16.4477 20 17 20H25C25.5523 20 26 20.4477 26 21C26 21.5523 25.5523 22 25 22H17C16.4477 22 16 21.5523 16 21Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
        <RNSVGPath
          clipRule={0}
          d="M26 8H6C4.89543 8 4 8.89543 4 10V22C4 23.1046 4.89543 24 6 24H26C27.1046 24 28 23.1046 28 22V10C28 8.89543 27.1046 8 26 8ZM6 6C3.79086 6 2 7.79086 2 10V22C2 24.2091 3.79086 26 6 26H26C28.2091 26 30 24.2091 30 22V10C30 7.79086 28.2091 6 26 6H6Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
            "letterSpacing": 0,
            "lineHeight": 17.939999999999998,
          },
          {
            "color": "#222013",
          },
          {
            "flexShrink": 1,
            "textAlign": "center",
          },
          {
            "paddingEnd": 6,
          },
        ]
      }
    >
      Wallet
    </Text>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "gap": 4,
        "justifyContent": "center",
        "minWidth": 0,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      color="#bfbcac"
      fill="currentColor"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={32}
      vbWidth={32}
      width={24}
      xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.125 4C16.6773 4 17.125 4.44772 17.125 5V6.75H17.5C18.8592 6.75 20.1628 7.28995 21.1239 8.25108C22.085 9.2122 22.625 10.5158 22.625 11.875C22.625 13.2342 22.085 14.5378 21.1239 15.4989C20.9414 15.6814 20.7466 15.8487 20.5414 16C20.7466 16.1513 20.9414 16.3186 21.1239 16.5011C22.085 17.4622 22.625 18.7658 22.625 20.125C22.625 21.4842 22.085 22.7878 21.1239 23.7489C20.1628 24.71 18.8592 25.25 17.5 25.25H17.125V27C17.125 27.5523 16.6773 28 16.125 28C15.5727 28 15.125 27.5523 15.125 27V25.25H12C11.4477 25.25 11 24.8023 11 24.25V7.75C11 7.19772 11.4477 6.75 12 6.75H15.125V5C15.125 4.44772 15.5727 4 16.125 4ZM13 8.75V15H17.5C18.3288 15 19.1237 14.6708 19.7097 14.0847C20.2958 13.4987 20.625 12.7038 20.625 11.875C20.625 11.0462 20.2958 10.2513 19.7097 9.66529C19.1237 9.07924 18.3288 8.75 17.5 8.75H13ZM17.5 17H13V23.25H16.1222C16.1231 23.25 16.1241 23.25 16.125 23.25C16.1259 23.25 16.1269 23.25 16.1278 23.25H17.5C18.3288 23.25 19.1237 22.9208 19.7097 22.3347C20.2958 21.7487 20.625 20.9538 20.625 20.125C20.625 19.2962 20.2958 18.5013 19.7097 17.9153C19.1237 17.3292 18.3288 17 17.5 17Z" fill="currentColor"/></svg>"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M16.125 4C16.6773 4 17.125 4.44772 17.125 5V6.75H17.5C18.8592 6.75 20.1628 7.28995 21.1239 8.25108C22.085 9.2122 22.625 10.5158 22.625 11.875C22.625 13.2342 22.085 14.5378 21.1239 15.4989C20.9414 15.6814 20.7466 15.8487 20.5414 16C20.7466 16.1513 20.9414 16.3186 21.1239 16.5011C22.085 17.4622 22.625 18.7658 22.625 20.125C22.625 21.4842 22.085 22.7878 21.1239 23.7489C20.1628 24.71 18.8592 25.25 17.5 25.25H17.125V27C17.125 27.5523 16.6773 28 16.125 28C15.5727 28 15.125 27.5523 15.125 27V25.25H12C11.4477 25.25 11 24.8023 11 24.25V7.75C11 7.19772 11.4477 6.75 12 6.75H15.125V5C15.125 4.44772 15.5727 4 16.125 4ZM13 8.75V15H17.5C18.3288 15 19.1237 14.6708 19.7097 14.0847C20.2958 13.4987 20.625 12.7038 20.625 11.875C20.625 11.0462 20.2958 10.2513 19.7097 9.66529C19.1237 9.07924 18.3288 8.75 17.5 8.75H13ZM17.5 17H13V23.25H16.1222C16.1231 23.25 16.1241 23.25 16.125 23.25C16.1259 23.25 16.1269 23.25 16.1278 23.25H17.5C18.3288 23.25 19.1237 22.9208 19.7097 22.3347C20.2958 21.7487 20.625 20.9538 20.625 20.125C20.625 19.2962 20.2958 18.5013 19.7097 17.9153C19.1237 17.3292 18.3288 17 17.5 17Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
            "letterSpacing": 0,
            "lineHeight": 17.939999999999998,
          },
          {
            "color": "#bfbcac",
          },
          {
            "flexShrink": 1,
            "textAlign": "center",
          },
          {
            "paddingEnd": 6,
          },
        ]
      }
    >
      Coin
    </Text>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "gap": 4,
        "justifyContent": "center",
        "minWidth": 0,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      color="#bfbcac"
      fill="currentColor"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={32}
      vbWidth={32}
      width={24}
      xml="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.0313 15C12.0105 15.324 12 15.6573 12 16C12 16.3427 12.0105 16.676 12.0313 17H23C23.5523 17 24 17.4477 24 18C24 18.5523 23.5523 19 23 19H12.3141C12.7383 20.8591 13.5814 22.3263 14.7757 23.4212C16.5659 25.0622 19.2905 26 23 26C23.5523 26 24 26.4477 24 27C24 27.5523 23.5523 28 23 28C18.9762 28 15.7008 26.9823 13.4243 24.8955C11.7803 23.3885 10.732 21.3928 10.2713 19H7C6.44772 19 6 18.5523 6 18C6 17.4477 6.44772 17 7 17H10.0279C10.0093 16.6725 10 16.3391 10 16C10 15.6609 10.0093 15.3275 10.0279 15H7C6.44772 15 6 14.5523 6 14C6 13.4477 6.44772 13 7 13H10.2713C10.732 10.6072 11.7803 8.6115 13.4243 7.10451C15.7008 5.01774 18.9762 4 23 4C23.5523 4 24 4.44772 24 5C24 5.55228 23.5523 6 23 6C19.2905 6 16.5659 6.93781 14.7757 8.57882C13.5814 9.67366 12.7383 11.1409 12.3141 13H23C23.5523 13 24 13.4477 24 14C24 14.5523 23.5523 15 23 15H12.0313Z" fill="currentColor"/></svg>"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12.0313 15C12.0105 15.324 12 15.6573 12 16C12 16.3427 12.0105 16.676 12.0313 17H23C23.5523 17 24 17.4477 24 18C24 18.5523 23.5523 19 23 19H12.3141C12.7383 20.8591 13.5814 22.3263 14.7757 23.4212C16.5659 25.0622 19.2905 26 23 26C23.5523 26 24 26.4477 24 27C24 27.5523 23.5523 28 23 28C18.9762 28 15.7008 26.9823 13.4243 24.8955C11.7803 23.3885 10.732 21.3928 10.2713 19H7C6.44772 19 6 18.5523 6 18C6 17.4477 6.44772 17 7 17H10.0279C10.0093 16.6725 10 16.3391 10 16C10 15.6609 10.0093 15.3275 10.0279 15H7C6.44772 15 6 14.5523 6 14C6 13.4477 6.44772 13 7 13H10.2713C10.732 10.6072 11.7803 8.6115 13.4243 7.10451C15.7008 5.01774 18.9762 4 23 4C23.5523 4 24 4.44772 24 5C24 5.55228 23.5523 6 23 6C19.2905 6 16.5659 6.93781 14.7757 8.57882C13.5814 9.67366 12.7383 11.1409 12.3141 13H23C23.5523 13 24 13.4477 24 14C24 14.5523 23.5523 15 23 15H12.0313Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
            "letterSpacing": 0,
            "lineHeight": 17.939999999999998,
          },
          {
            "color": "#bfbcac",
          },
          {
            "flexShrink": 1,
            "textAlign": "center",
          },
          {
            "paddingEnd": 6,
          },
        ]
      }
    >
      Cash
    </Text>
  </View>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless Topbar — BARE children default to the trailing region (the "just actions" slot) 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fffdf2",
      "flexDirection": "row",
      "gap": 6,
      "height": 54,
      "paddingEnd": 18,
      "paddingStart": 18,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "minWidth": 0,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-end",
        "minWidth": 0,
      }
    }
  >
    <View
      accessibilityLabel="bare-action"
    />
  </View>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless Topbar — COMPOUND slots · leading/center/trailing regions composed via sub-components 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fffdf2",
      "flexDirection": "row",
      "gap": 6,
      "height": 54,
      "paddingEnd": 18,
      "paddingStart": 18,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "minWidth": 0,
      }
    }
  >
    <View
      accessibilityLabel="leading"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text>
      Account
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-end",
        "minWidth": 0,
      }
    }
  >
    <View
      accessibilityLabel="trailing"
    />
  </View>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless primitives — Pressable · interactive opt-in · pressed transient via the shared applier 1`] = `
<View
  accessibilityLabel="Buy"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#beaaff",
      "padding": 12,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 17,
          "fontWeight": "400",
          "letterSpacing": -0.34,
          "lineHeight": 21.93,
        },
        {
          "color": "#381b6a",
        },
        {},
      ]
    }
  >
    Buy
  </Text>
</View>
`;

exports[`render-smoke — the ergonomic components mount headless primitives — View ⊃ Stack ⊃ Text compose · merged box⊕stack⊕palette + colour-by-scope 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#f3f1e2",
            "borderRadius": 18,
            "padding": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 6,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 17,
                  "fontWeight": "600",
                  "letterSpacing": -0.34,
                  "lineHeight": 21.93,
                },
                {
                  "color": "#222013",
                },
                {},
              ]
            }
          >
            Wallet
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
